templates/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: APP_NAMESPACE
  labels:
    name: APP_NAMESPACE
